# python-causality-handbook

./: Simulated-Data.ipynb  pyproject.toml
causal-inference-for-the-brave-and-true/: 01-Introduction-To-Causality.ipynb  02-Randomised-Experiments.ipynb  03-Stats-Review-The-Most-Dangerous-Equation.ipynb  04-Graphical-Causal-Models.ipynb  05-The-Unreasonable-Effectiveness-of-Linear-Regression.ipynb  06-Grouped-and-Dummy-Regression.ipynb  07-Beyond-Confounders.ipynb  08-Instrumental-Variables.ipynb  09-Non-Compliance-and-LATE.ipynb  10-Matching.ipynb  11-Propensity-Score.ipynb  12-Doubly-Robust-Estimation.ipynb  13-Difference-in-Differences.ipynb  14-Panel-Data-and-Fixed-Effects.ipynb  15-Synthetic-Control.ipynb  16-Regression-Discontinuity-Design.ipynb  17-Predictive-Models-101.ipynb  18-Heterogeneous-Treatment-Effects-and-Personalization.ipynb  19-Evaluating-Causal-Models.ipynb  20-Plug-and-Play-Estimators.ipynb  21-Meta-Learners.ipynb  22-Debiased-Orthogonal-Machine-Learning.ipynb  23-Challenges-with-Effect-Heterogeneity-and-Nonlinearity.ipynb  24-The-Diff-in-Diff-Saga.ipynb  Conformal-Inference-for-Synthetic-Control.ipynb  Debiasing-with-Orthogonalization.ipynb  Debiasing-with-Propensity-Score.ipynb  Prediction-Metrics-For-Causal-Models.ipynb
