[tool.poetry]
name = "python-causality-handbook"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "python_causality_handbook"}]

[tool.poetry.dependencies]
python = ">=3.9.5,<3.11"
pandas = "1.5.3"
numpy = "1.24.3"
scikit-learn = "1.1.3"
statsmodels = "0.13.2"
ipykernel = "6.23.1"
seaborn = "0.12.2"
matplotlib = "3.7.2"
graphviz = "^0.20.1"
toolz = "^0.12.0"
cvxpy = "1.3.2"
linearmodels = "5.1"
causalinference = "^0.1.3"
lightgbm = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
